# projekt_sdizo_2

./: CMakeLists.txt  README.md  TODO  main.cpp
algorithms/: BellmanFord.cpp  BellmanFord.h  Dijkstra.cpp  Dijkstra.h  Kruskal.cpp  Kruskal.h  Prim.cpp  Prim.h
files/: e.txt  graph.txt  graphD.txt  graphU.txt  results.csv  t.txt  test.txt
graph/: GraphAsList.cpp  GraphAsList.h  GraphAsMatrix.cpp  GraphAsMatrix.h
testers/: AutomaticTester.cpp  AutomaticTester.h  ManualTester.cpp  ManualTester.h
utilities/: DisjointSets.cpp  DisjointSets.h  FileCreator.cpp  FileCreator.h  FileOperator.cpp  FileOperator.h  Timer.cpp  Timer.h
